--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
     "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/cryptr": "^4.0.1",
     "@types/dotenv": "^8.2.0",
