--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.ts",
-    "dev": "nodemon index.ts"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,8 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "nodemon": "^2.0.19",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
